<?xml version="1.0"?>
<package>
  <name>simple_talker</name>
  <version>0.0.0</version>
  <description>The simple_talker package</description>

  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>

</package>
